# Oroucle

./: README.md
casino/: Cargo.toml
casino/src/: error.rs  instruction.rs  lib.rs  processor.rs  state.rs  system_utils.rs  validation_utils.rs
random/: Cargo.toml
random/src/: random.rs
roulette/: package.json  tsconfig.paths.json
roulette/public/: index.html
roulette/redistribution/: main.js
roulette/src/: App.tsx  index.tsx
roulette/src/actions/: account.ts  betEnum.ts  constants.ts  context.tsx  decoders.ts  index.ts  instructions.ts  schema.ts  state.ts  transactions.ts
roulette/src/components/: ConnectButton.tsx  SpinButton.tsx  index.ts
roulette/src/components/Balance/: Balance.tsx
roulette/src/components/BalancePanel/: BalancePanel.tsx
roulette/src/components/BetSelection/: BetSelection.tsx  board.css  index.tsx
roulette/src/components/Confetti/: index.tsx
roulette/src/components/DefaultModal/: index.tsx
roulette/src/components/Header/: Header.tsx
roulette/src/components/PanelName/: PanelName.tsx
roulette/src/components/RouletteWheel/: RouletteWheel.tsx  index.tsx  styles.css
roulette/src/components/Settings/: index.tsx
roulette/src/contexts/: BetTrackerContext.tsx  ConnectionContext.tsx  index.tsx
roulette/src/contexts/WalletContext/: WalletContext.tsx
roulette/src/theme/: theme.ts
