[package]
name = "casino"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []
test-bpf = []

[dependencies]
solana-program = "1.7.1"
random = {path="../random", features = ["no-entrypoint"]}
spl-token = "3.2.0"
spl-associated-token-account = {version = "1.0.3", features = ["no-entrypoint"]}
thiserror = "1.0"
arrayref = "0.3.6"
borsh = "0.9"
uint = "0.9"

[lib]
crate-type = ["cdylib", "lib"]
